Added tests and implemented the POST /questions (create)

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WIld pursuit",
   "main": "index.js",
   "scripts": {
-    "test": "mocha \"./src/**/*.test.js\"",
-    "test:watch": "mocha -w \"./src/**/*.test.js\""
+    "test": "NODE_ENV=test mocha \"./src/**/*.test.js\"",
+    "test:watch": "NODE_ENV=test mocha -w \"./src/**/*.test.js\""
   },
   "repository": {
     "type": "git",
