--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "hapi": "^17.5.2",
+    "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "postgresql": "0.0.1",
     "sequelize": "^4.38.0",
