--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Wild pursuit",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/app.js",
     "test": "NODE_ENV=test mocha \"./src/**/*.test.js\"",
     "test:watch": "NODE_ENV=test mocha -w \"./src/**/*.test.js\""
   },
@@ -20,13 +21,15 @@
   "devDependencies": {
     "code": "^5.2.0",
     "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
+    "prettier": "^1.14.0"
   },
   "dependencies": {
     "hapi": "^17.5.2",
     "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "postgresql": "0.0.1",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.9",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
     "win-node-env": "^0.1.0"
