--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.2",
+    "react-dice": "^1.0.1",
+    "react-dice-complete": "^1.0.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
