--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.5.0",
+    "@material-ui/lab": "^1.0.0-alpha.10",
     "react": "^16.4.2",
     "react-dice": "^1.0.1",
     "react-dice-complete": "^1.0.2",
