--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "react-dice": "^1.0.1",
     "react-dice-complete": "^1.0.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
