--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,10 @@
     "react-dice": "^1.0.1",
     "react-dice-complete": "^1.0.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
