--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost/5000",
   "dependencies": {
     "@material-ui/core": "^1.5.0",
     "@material-ui/lab": "^1.0.0-alpha.10",
