--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,10 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
+  "externals": {
+    "uws": "uws"
+  },
   "dependencies": {
     "@material-ui/core": "^1.5.0",
     "@material-ui/lab": "^1.0.0-alpha.10",
@@ -13,7 +17,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
