--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uws": "^99.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
