--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Wild Pursuit",
+  "name": "Wild Pursuit",
   "icons": [
     {
       "src": "favicon.ico",
